<resources>
    <string name="app_name">Cryptolearn</string>
    <string name="title_activity_crypto">CryptoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="input_caesar_cipher">Input</string>
    <string name="output">Output</string>
    <string name="minus">-</string>
    <string name="translate">Translate</string>
    <string name="shift">Shift #</string>
    <string name="plus">+</string>
    <string name="inputcaesar">input</string>
    <string name="learn_cipher">Also known as the shift cipher, the Caesar cipher is one of the oldest and simplest ciphers. It was developed by Julius Caesar who used the code to protect classified messages from his enemies. How this code works is that each message is sent with a key number which will represent the shift in the alphabet for that message. For example, if the key number of a message was 3 the letter A would shift over 3 in the alphabet and become D. Once all the letters in the message are shifted by the key number, the message will appear.</string>
    <string name="learn_binary">Also known as Boolean Logic, Binary was first introduced by George Boole in the 1930s. The arrival of computers and technological advances came the need for a more sophisticated system of counting, this prompted the birth of the Binary Number System. The definition of binary code is any code that uses just two symbols to represent information. The two symbols we\'re using 1s and are 0s. Binary code is the way most computerized devices send, receive, and store information. How binary code works is that each letter and symbol is assigned a byte (8-bit binary code) you can turn those letters into a set of 1s and 0s using binary code.</string>
    <string name="learn">Learn</string>
    <string name="translate_to_caesar">Translate to Caesar</string>
    <string name="welcome_to_cryptolearn">Welcome to Cryptolearn</string>
    <string name="our_mission">Our Mission:</string>
    <string name="our_mission_desc">To teach people of all ages cryptography. We hope to instill a passion for computer science and its respective fields in all people and provide the resources to do so.</string>
    <string name="what_to_do_desc">Within the app you can learn about different cryptography, translate phrases into different encoded phrases, or practice decoding codes and ciphers. Have fun!</string>
    <string name="what_to_do">What to do?:</string>
    <string name="why_learn">Binary numbers are important because using them instead of the decimal system simplifies the design of computers and related technologies. Advantages include ease of use in coding, fewer computations and less computational errors.</string>
    <string name="why_caesar">Cryptanalysis is the art of breaking codes and ciphers. The Caesar cipher is probably the easiest of all ciphers to break. If one understands how a Caesar Cipher works, it becomes much easier to understand how other ciphers can be decoded.</string>
    <string name="caesar_cipher">Caesar Cipher</string>
    <string name="binary">Binary</string>
    <string name="welcome">Welcome</string>
</resources>
