<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_welcome"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/welcome" />
        <item
            android:id="@+id/nav_caesar"
            android:icon="@drawable/ic_filter_tilt_shift_black_24dp"
            android:title="@string/caesar_cipher" />
        <item
            android:id="@+id/nav_binary"
            android:icon="@drawable/ic_exposure_zero_black_24dp"
            android:title="@string/binary" />

    </group>


</menu>
