<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_appbar_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CryptoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="503dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/textview_appbar_welcome"
        android:layout_width="308dp"
        android:layout_height="108dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text="@string/welcome_to_cryptolearn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/textview_appbar_ourmission"
        android:layout_width="105dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:fontFamily="monospace"
        android:text="@string/our_mission"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_appbar_welcome" />

    <TextView
        android:id="@+id/textview_appbar_ourmissiondesc"
        android:layout_width="228dp"
        android:layout_height="119dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/our_mission_desc"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/textview_appbar_ourmission"
        app:layout_constraintTop_toBottomOf="@+id/textview_appbar_welcome" />

    <TextView
        android:id="@+id/textview_appbar_uses"
        android:layout_width="99dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="108dp"
        android:fontFamily="monospace"
        android:text="What to do?:"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_appbar_ourmission"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textview_appbar_whattododesc"
        android:layout_width="228dp"
        android:layout_height="124dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="Within the app you can learn about different cryptography, translate phrases into different encoded phrases, or practice decoding codes and ciphers. Have fun!  "
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textview_appbar_uses"
        app:layout_constraintTop_toBottomOf="@+id/textview_appbar_ourmissiondesc"
        app:layout_constraintVertical_bias="0.454" />

</android.support.constraint.ConstraintLayout>